Address overflow issues

--- a/client/src/components/chat/chat.component.scss
+++ b/client/src/components/chat/chat.component.scss
@@ -26,11 +26,16 @@
 
   .body {
     flex: 1 1 auto;
+    position: relative;
 
     .messages {
       list-style-type: none;
       padding: 0;
       margin: 0;
+      margin-bottom: 12px;
+      position: absolute;
+      top: 0; right: 0; bottom: 0; left: 0;
+      overflow-y: scroll;
     }
   }
 
