--- a/client/src/components/namespaces/namespaces.component.scss
+++ b/client/src/components/namespaces/namespaces.component.scss
@@ -1,4 +1,5 @@
 
 .Namespaces {
   color: white;
+  overflow-y: scroll;
 }
