--- a/client/src/components/rooms/rooms.component.scss
+++ b/client/src/components/rooms/rooms.component.scss
@@ -2,6 +2,7 @@
 .Rooms {
   color: white;
   padding: 12px 0;
+  overflow-y: scroll;
 
   .room-list {
     list-style-type: none;
